tests/ui/sized-hierarchy/prelude.e2024.stderr
error[E0405]: cannot find trait `MetaSized` in this scope
  --> $DIR/prelude.rs:10:21
   |
LL | pub fn metasized<T: MetaSized>() {}
   |                     ^^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL + use std::marker::MetaSized;
   |

error[E0405]: cannot find trait `PointeeSized` in this scope
  --> $DIR/prelude.rs:12:24
   |
LL | pub fn pointeesized<T: PointeeSized>() {}
   |                        ^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL + use std::marker::PointeeSized;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0405`.
